--- a/simon/custom.css
+++ b/simon/custom.css
@@ -11,9 +11,10 @@ body {
 
 header,
 main,
-footer {
+footer, nav{
   max-width: 1024px;
   margin: auto;
+  width: 100%;
 }
 
 main {
@@ -157,6 +158,7 @@ input {
   padding: 0.4rem 0.4rem;
   border: 0;
   text-transform: uppercase;
+  cursor:pointer;
 }
 
 #buttons .btn:hover {
@@ -182,6 +184,7 @@ input {
   padding-top: 10px;
   padding-left: 5px;
   padding-right: 5px;
+  width: 100%;
 }
 
 #counter {
